# OZ_Django

./: .gitignore  README.md  commit_message.txt  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Django_1일차_필수과제/: db.sqlite3
Django_1일차_필수과제/gugudan/: urls.py  views.py
Django_1일차_필수과제/gugudan/templates/gugudan/: gugudan.html
Django_1일차_필수과제/gugudan_project/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/registration/: login.html
bookmarks/: models.py  tests.py  urls.py  views.py
bookmarks/migrations/: 0001_initial.py  0002_alter_bookmark_name.py  0002_bookmark_author.py  0003_alter_bookmark_author.py
bookmarks/templates/bookmarks/: bookmark_confirm_delete.html  bookmark_detail.html  bookmark_form.html  bookmark_list.html
comments/: models.py  urls.py  views.py
comments/migrations/: 0001_initial.py
comments/templates/comments/partials/: comment.html
config/: settings.py  urls.py
gugudan/templates/gugudan/: gugudan_dan.html
templates/: base.html  index.html
todos/: forms.py  models.py  urls.py  views.py
todos/migrations/: 0001_initial.py  0002_todo_author_comment.py  0003_alter_todo_author.py  0004_remove_todo_description_todo_content_todo_image_and_more.py
todos/templates/todos/: comment_form.html  comment_update_form.html  todo_confirm_delete.html  todo_detail.html  todo_form.html  todo_list.html
todos/templates/todos/partials/: comment.html
