[tool.poetry]
name = "django-2일차-필수과제"
version = "0.1.0"
description = ""
authors = ["BE12-OZ <dhwmzheld6470@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
